# va416xx-cpp-base

./: .gitignore  CMakeLists.txt  NOTICE  README.md  jlink-gdb.sh  jlink.gdb
archive/: board.h  jlink-disable-wd-rom-prot.gdb
cmake/: BuildType.cmake  VA416XXToolchain.cmake
config/: CMakeLists.txt  VORConfig.h.in  fault.cpp  irq.cpp  overrideWeak.cpp
eclipse/: .cproject  .project  va416xx-cpp-base debug.launch  va416xx-cpp-base.launch
jlink/: JLinkSettings.JLinkScript
scripts/: apply-clang-format.sh
src/: CMakeLists.txt  main.cpp  overrideWeak.cpp
stuff/: data_init.txt  log.txt  removed_stack_heap_init.txt  removed_startup_code.txt
vorago/: va416xx-base.svd  va416xx-orig.svd
vorago/linker/: va416xx_linker.ld
vorago/src/: CMakeLists.txt
vorago/src/common/: CMakeLists.txt  cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_cm4.h  core_cmFunc.h  core_cmInstr.h  mpu_armv7.h  system_va416xx.h  va416xx.h
vorago/src/common/drivers/: CMakeLists.txt  va416xx_debug.c  va416xx_debug.h  va416xx_hal.c  va416xx_hal.h  va416xx_hal_adc.h  va416xx_hal_adc_swcal.c  va416xx_hal_canbus.h  va416xx_hal_clkgen.c  va416xx_hal_clkgen.h  va416xx_hal_dac.c  va416xx_hal_dac.h  va416xx_hal_dma.c  va416xx_hal_ethernet.c  va416xx_hal_i2c.c  va416xx_hal_i2c.h  va416xx_hal_ioconfig.c  va416xx_hal_ioconfig.h  va416xx_hal_irqrouter.c  va416xx_hal_irqrouter.h  va416xx_hal_spi.c  va416xx_hal_spi.h  va416xx_hal_uart.c  va416xx_hal_uart.h
vorago/src/drivers/: CMakeLists.txt  va416xx_bitband.h  va416xx_debug.c  va416xx_debug.h  va416xx_hal.h  va416xx_hal_adc.c  va416xx_hal_adc.h  va416xx_hal_adc_swcal.h  va416xx_hal_canbus.c  va416xx_hal_clkgen.c  va416xx_hal_dma.c  va416xx_hal_dma.h  va416xx_hal_ethernet.h  va416xx_hal_gpio.h  va416xx_hal_i2c.c  va416xx_hal_i2c.h  va416xx_hal_irqrouter.c  va416xx_hal_irqrouter.h  va416xx_hal_spi.c  va416xx_hal_spi.h  va416xx_hal_spw.c  va416xx_hal_spw.h  va416xx_hal_timer.c  va416xx_hal_timer.h  va416xx_hal_uart.c  va416xx_hal_uart.h
vorago/src/drivers/eth/: synopGMAC_Debug.c  synopGMAC_Dev.c  synopGMAC_Dev.h  synopGMAC_Host.c  synopGMAC_Host.h  synopGMAC_banner.h  synopGMAC_network_interface.c  synopGMAC_network_interface.h  synopGMAC_pci_bus_interface.c  synopGMAC_pci_bus_interface.h  synopGMAC_plat.c  synopGMAC_plat.h
vorago/src/drivers/spw/: rmapapi.c  rmapapi.h  spw_test_dual.c  spw_test_dual_sep.c  spwapi.c  spwapi.h  spwtest.c
vorago/src/start/: CMakeLists.txt  startup_va416xx.S  system_va416xx.c
vorago/src/start/unused/: startup_va416xx.S  startup_va416xx.s
vorago/src/user/: CMakeLists.txt  event_handler_index.c  event_handler_index.h
vorago/src/utils/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  debug_simulation.c  debug_simulation.h  hardFault_handler.c  hardFault_handler.h  hardFault_handler.s  segger_rtt.c  segger_rtt.h  segger_rtt_conf.h  segger_rtt_printf.c  segger_rtt_syscalls_gcc.c  spi_fram.c  spi_fram.h  utils.c  utils.h  vectrst.c  vectrst.h  vectrst.s
vorago/src/utils/unused/: SEGGER_RTT_Syscalls_IAR.c  segger_rtt_syscalls_keil.c  segger_rtt_syscalls_ses.c
